@@ -17,7 +17,8 @@ Overview of Changes in Glimpse 0.2.1
 * Backported fix for upstream regression caused by GEGL 0.4.28, made gegl:introspection optional
 * Added Large Text variants of Dark, Gray and Light UI themes
 * Removed sticker border from Windows program icon
-* Updated Github Actions for Windows so it copies files into the build directory
+* Updated Github Actions for Windows so it copies useful files into the build directory
+* Moved links back to glimpse-editor.org
 * TO BE DETERMINED - Still in development
 
 Overview of Changes in Glimpse 0.2.0
